--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
+	<header id="principal">
+		<div class="capa">
+			<h5>Oferta de la Semana</h5>
+			<h2>Pack de 06 cursos de Motion Graphics</h2>
+			<div>
+				<p>73 % de descuento en 6 cursos</p>
+				<a href=""><button>VER DETALLES</button></a>
+			</div>
+		</div>
+	</header>
 	
 </body>
 </html>
