--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
-	
+	<nav id="navegacion">
+		<a href="./index.html"><img class="logo" src="./img/logo.png"></a>
+		<ul>
+			<li><a href="">Inicio</a></li>
+			<li><a href="">Proyectos</a></li>
+			<li><a href="">Recursos</a></li>
+			<li><a href="">SEO</a></li>
+			<li><a href="">Blog</a></li>
+		</ul>
+		<p class="new">¿Quieres comunicarte con nosotros?</p>
+		<div class="new2">
+			<p>+51992919555</p>
+		</div>
+		
+	</nav>
 </body>
 </html>
