--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			<h2>Pack de 06 cursos de Motion Graphics</h2>
 			<div>
 				<p>73 % de descuento en 6 cursos</p>
-				<a href=""><button>VER DETALLES</button></a>
+				<a href="#"><button>VER DETALLES</button></a>
 			</div>
 		</div>
 	</header>
