--- a/index.html
+++ b/index.html
@@ -1,35 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>MIYA Creative</title>
-	<link rel="stylesheet" href="./css/styles.css">
-	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<meta charset="UTF-8">
+<title>MIYA Creative</title>
+<link rel="stylesheet" href="./css/styles.css">
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
-	<nav id="navegacion">
-		<a href="./index.html"><img class="logo" src="./img/logo.png"></a>
-		<ul>
-			<li><a href="">Inicio</a></li>
-			<li><a href="">Proyectos</a></li>
-			<li><a href="">Recursos</a></li>
-			<li><a href="">SEO</a></li>
-			<li><a href="">Blog</a></li>
-		</ul>
-		<p class="new">¿Quieres comunicarte con nosotros?</p>
-		<div class="new2">
-			<p>+51992919555</p>
-		</div>
-	</nav>
-	<header id="principal">
-		<div class="capa">
-			<h5>Oferta de la Semana</h5>
-			<h2>Pack de 06 cursos de Motion Graphics</h2>
-			<div>
-				<p>73 % de descuento en 6 cursos</p>
-				<a href="#"><button>VER DETALLES</button></a>
-			</div>
-		</div>
-	</header>
+<nav id="navegacion"> 
+<div class="content1"> 
+ <a href="./index.html"><img class="logo" src="./img/logo.png"></a>
+  <ul>
+    <li><a href="">Inicio</a></li>
+    <li><a href="">Proyectos</a></li>
+    <li><a href="">Recursos</a></li>
+    <li><a href="">SEO</a></li>
+    <li><a href="">Blog</a></li>
+  </ul>
+  <div class="contacte">
+  	<p class="new">¿Quieres comunicarte con nosotros?</p>
+  	<p class="new2">Llamame: 992919555</p>
+  </div>
+  
+  </div>
+</nav>
+<header id="principal">
+  <div class="capa">
+    <h5>Oferta de la Semana</h5>
+    <h2>Pack de 06 cursos de Motion Graphics</h2>
+    <div>
+      <p>73 % de descuento en 6 cursos</p>
+      <a href="#">
+      <button>VER DETALLES</button>
+      </a> </div>
+  </div>
+</header>
 </body>
 </html>
