--- a/index.html
+++ b/index.html
@@ -24,12 +24,14 @@
 	<header id="principal">
 		<div class="capa">
 			<h5>Oferta de la Semana</h5>
-			<h2>Pack de 06 cursos de Motion Graphics</h2>
-			<div>
-				<p>73 % de descuento en 6 cursos</p>
-				<a href="#"><button>VER DETALLES</button></a>
-			</div>
+			<h2>Pack de 06 cursos de Motion <br> Graphics</h2>
+			<p>73 % de descuento en 6 cursos</p>
 		</div>
+		<a style="text-decoration: none;" href="">
+			<div class="boton">
+				<p class="detalle">VER DETALLES</p>
+			</div>
+		</a> 
 	</header>
 </body>
 </html>
